# Quantum-Inspired-Real-Time-Traffic-Logistics-Optimization

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  Dockerfile  Dockerfile.streamlit  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  route_map.html  temp_response.json
.claude/: settings.local.json
.github/workflows/: ci.yml
.planning/todos/done/: 2026-02-02-update-claude-md-with-new-modules.md
alembic/: env.py
alembic/versions/: 20240101_0000_001_initial_schema.py
data/: .gitkeep
docs/: API.md  ARCHITECTURE.md  PRODUCTION.md  RUNBOOK.md
experiments/: comparison.ipynb
frontend/: folium_map.html  package.json  streamlit_app.py
frontend/src/: App.js
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml  service.yaml
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
quantum-traffic-ui/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
quantum-traffic-ui/src/: App.tsx  index.css  main.tsx
quantum-traffic-ui/src/components/Auth/: LoginForm.tsx  ProtectedRoute.tsx
quantum-traffic-ui/src/components/Dashboard/: AlgorithmComparison.tsx  ComparisonChart.tsx  DeliveryList.tsx  LocationSearch.tsx  MetricsCard.tsx  OptimizationPanel.tsx  OptimizationResults.tsx
quantum-traffic-ui/src/components/Layout/: Navbar.tsx
quantum-traffic-ui/src/components/Map/: RouteMap.tsx
quantum-traffic-ui/src/pages/: Dashboard.tsx  History.tsx  Login.tsx
quantum-traffic-ui/src/services/: api.ts  websocket.ts
quantum-traffic-ui/src/stores/: authStore.ts  routeStore.ts
quantum-traffic-ui/src/types/: index.ts
scripts/: init-db.sql
src/: __init__.py  api_router.py  cache.py  clustering.py  config.py  database.py  database_models.py  exceptions.py  graph_builder.py  logging_config.py  main.py  metrics.py  models.py  qubo_optimizer.py  security.py  tracing.py  traffic_api.py  traffic_sim.py  utils.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  test_api.py  test_full_system.py  test_graph_builder.py  test_qubo_optimizer.py  test_traffic_sim.py
tests/performance/: benchmark.py  locustfile.py
